# Final_Movie_Analysis

./: .gitignore  LICENSE  README.md  _quarto.yml  analyze.html  analyze.ipynb  dirty_data.csv  documentation.qmd  index.qmd  main.py  ml_movie_data.csv  ml_testing.html  ml_testing.ipynb  movie_data.csv  pyproject.toml  report.md  streamlit_app.py  streamlit_graphs.py  technical_report.qmd  tutorial.qmd  web_scrape.ipynb
docs/: analyze.html  documentation.html  index.html  ml_testing.html  robots.txt  search.json  sitemap.xml  technical_report.html  tutorial.html  web_scrape.html
src/final_movie_analysis/: __init__.py  functions.py
tests/: test_functions.py
tutorial_files/execute-results/: html.json
