[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"
[project]
name = "final-movie-analysis"
version = "0.1.1"
description = "A package that scrapes movie data from Universal Studios and analyzes it."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent"
]
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.1.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "streamlit>=1.52.1",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/CNelson2004/Final_Movie_Analysis"
Repository = "https://github.com/CNelson2004/Final_Movie_Analysis.git"
Issues = "https://github.com/CNelson2004/Final_Movie_Analysis/issues"
