[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"
[project]
name = "final-movie-analysis"
version = "1.0.0"
description = "A package that scrapes movie data from Universal Studios and analyzes it."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent"
]
dependencies = [
    "requests>=2.32.5",
    "bs4>=0.0.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
    "lxml>=6.0.2",
    "scipy>=1.16.3",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "pingouin>=0.5.5",
]

[project.urls]
Homepage = "https://github.com/CNelson2004/Final_Movie_Analysis"
Repository = "https://github.com/CNelson2004/Final_Movie_Analysis.git"
Issues = "https://github.com/CNelson2004/Final_Movie_Analysis/issues"
